New changes in My portfolio like social media links and many more.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav
       class="w-full fixed px-5 lg:px-8 xl:px-[8%] py-4 flex items-center justify-between z-50"
     >
-      <img
+      <!-- <img
         src="./images/logo.png"
         alt="Logo"
         class="w-28 cursor-pointer mr-14 dark:hidden"
@@ -35,7 +35,8 @@
         src="./images/logo_dark.png"
         alt="Logo"
         class="w-28 cursor-pointer mr-14 hidden dark:block"
-      />
+      /> -->
+      <span class="text-5xl">  Ritik <span class="text-violet-400">.  </span></span>
 
       <ul
         class="hidden md:flex items-center gap-6 lg:gap-8 rounded-full px-12 py-3 bg-white shadow-sm bg-opacity-50 font-Ovo dark:border dark:border-white/50 dark:bg-transparent"
@@ -112,7 +113,8 @@
       class="w-11/12 max-w-3xl text-center mx-auto h-screen flex flex-col items-center justify-center gap-4"
     >
       <!-- Profile image icon -->
-      <img src="./images/" alt="" class="rounded-full w-32" />
+      <!-- <img src="./images/" alt="" class="rounded-full w-32" /> -->
+
       <h3 class="flex items-center gap-2 text-xl md:text-2xl mb-3 font-Ovo">
         Hi! I'm Ritik Rana
         <img src="./images/hand-icon.png" alt="" class="w-6" />
@@ -370,7 +372,7 @@
         </div>
       </div>
     </div>
-    <!-- -----------------My work----------------- -->
+    <!-------------------My work------------------->
 
     <div id="work" class="w-full px-[12%] py-10 scroll-mt-2">
       <h4 class="text-center mb-2 text-lg font-Ovo">My portfolio</h4>
@@ -400,7 +402,7 @@
           </div>
         </div>
 
-        <!-- dfsdfs -->
+        <!-- Geo Based mobile app -->
         <div
           class="aspect-square bg-[url('./images/work-2.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group"
         >
@@ -419,7 +421,7 @@
           </div>
         </div>
 
-        <!-- fsdfsd -->
+        <!-- Web Design -->
         <div
           class="aspect-square bg-[url('./images/work-3.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group"
         >
@@ -438,7 +440,7 @@
           </div>
         </div>
 
-        <!-- fsdfsd -->
+        <!-- UI/UX Design -->
         <div
           class="aspect-square bg-[url('./images/work-4.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group"
         >
@@ -537,7 +539,7 @@
 
     <div class="mt-20">
       <div class="text-center">
-        <img
+        <!-- <img
           src="./images/logo.png"
           alt=""
           class="w-36 mx-auto mb-2 dark:hidden"
@@ -547,7 +549,10 @@
           src="./images/logo_dark.png"
           alt=""
           class="w-36 mx-auto mb-2 hidden dark:block"
-        />
+        /> -->
+        <span class="text-6xl">
+          Ritik <span class="text-violet-400">.</span>
+        </span>
 
         <div class="w-max flex items-center gap-2 mx-auto">
           <img src="./images/mail_icon.png" alt="" class="w-6 dark:hidden" />
@@ -567,9 +572,15 @@
         <p>Copyright © 2024 | All Rights Reserved by Ritik</p>
         <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
           <!-- <li><a href="https://instagram.com/">Instagram</a></li> -->
-          <li><a href="https://instagram.com/">GitHub</a></li>
-          <li><a href="https://instagram.com/">LinkedIn</a></li>
-          <li><a href="https://instagram.com/">Twitter</a></li>
+          <li><a href="https://github.com/ritikdevelop">GitHub</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/ritik-rana-37aa0b232/"
+              >LinkedIn</a
+            >
+          </li>
+          <li>
+            <a href="https://www.instagram.com/ritik_rana_iam/">Instagram</a>
+          </li>
         </ul>
       </div>
     </div>
